--- a/generate_data.ipynb
+++ b/generate_data.ipynb
@@ -2,20 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "\n",
-    "ticker_set = set(list(range(0, 100)))\n",
+    "ticker_set = set(list(range(1, 120 + 1)))\n",
     "\n",
     "def generate_data(num_user):\n",
     "    f = open(\"stock_users.dat\",\"w+\")\n",
-    "    for i in range(num_user):\n",
+    "    for i in range(1,num_user):\n",
     "        tickers = random.sample(ticker_set, 10)\n",
-    "        for ticker in tickers:\n",
-    "            f.write(str(i) + \"::\" + str(ticker) + \"::1::\" + str(ticker) + \"\\n\")\n",
+    "        for stock_id in range(1, len(ticker_set)):\n",
+    "            if stock_id in tickers:\n",
+    "                f.write(str(i) + \"::\" + str(stock_id) + \"::1::\" + str(stock_id) + \"\\n\")\n",
+    "            else:\n",
+    "                f.write(str(i) + \"::\" + str(stock_id) + \"::0::\" + str(stock_id) + \"\\n\")\n",
+    "            \n",
     "        \n",
     "        \n",
     "generate_data(1000)"
