--- a/generate_portfolio.ipynb
+++ b/generate_portfolio.ipynb
@@ -25,25 +25,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "\n",
     "def generate_data(stocks):\n",
-    "    with open('file.txt', 'a') as file:\n",
-    "        line_list = file.readlines()\n",
-    "        last_line = line_list[-1]\n",
-    "        last_index = str1.split(\"::\")\n",
+    "    fileHandle = open ( 'stock_users.dat',\"r\" )\n",
+    "    line_list = fileHandle.readlines()\n",
+    "    fileHandle.close()\n",
+    "    last_line = line_list[-1]\n",
+    "    last_user = last_line.split(\"::\")[0]\n",
+    "    next_user = int(last_user) + 1\n",
+    "\n",
+    "    with open('stock_users.dat', 'a') as file:\n",
     "        for stock_id in range(1, 121):\n",
     "            if stock_id in stocks:\n",
-    "                f.write(str(i) + \"::\" + str(stock_id) + \"::1::\" + str(stock_id) + \"\\n\")\n",
+    "                file.write(str(next_user) + \"::\" + str(stock_id) + \"::1::\" + str(stock_id) + \"\\n\")\n",
     "            else:\n",
-    "                f.write(str(i) + \"::\" + str(stock_id) + \"::0::\" + str(stock_id) + \"\\n\")\n"
+    "                file.write(str(next_user) + \"::\" + str(stock_id) + \"::0::\" + str(stock_id) + \"\\n\")\n",
+    "    \n",
+    "generate_data([1,2,4])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
