edited generate portfolio to generate to first index

--- a/generate_portfolio.ipynb
+++ b/generate_portfolio.ipynb
@@ -2,29 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "999\n"
-     ]
-    }
-   ],
-   "source": [
-    "fileHandle = open ( 'stock_users.dat',\"r\" )\n",
-    "lineList = fileHandle.readlines()\n",
-    "fileHandle.close()\n",
-    "# or simply\n",
-    "str1 = lineList[-1]\n",
-    "str1 = str1.split(\"::\")\n",
-    "print(str1[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [],
@@ -32,21 +9,12 @@
     "import random\n",
     "\n",
     "def generate_data(stocks):\n",
-    "    fileHandle = open ( 'stock_users.dat',\"r\" )\n",
-    "    line_list = fileHandle.readlines()\n",
-    "    fileHandle.close()\n",
-    "    last_line = line_list[-1]\n",
-    "    last_user = last_line.split(\"::\")[0]\n",
-    "    next_user = int(last_user) + 1\n",
-    "\n",
     "    with open('stock_users.dat', 'a') as file:\n",
     "        for stock_id in range(1, 121):\n",
     "            if stock_id in stocks:\n",
-    "                file.write(str(next_user) + \"::\" + str(stock_id) + \"::1::\" + str(stock_id) + \"\\n\")\n",
+    "                file.write(str(1) + \"::\" + str(stock_id) + \"::1::\" + str(stock_id) + \"\\n\")\n",
     "            else:\n",
-    "                file.write(str(next_user) + \"::\" + str(stock_id) + \"::0::\" + str(stock_id) + \"\\n\")\n",
-    "    \n",
-    "generate_data([1,2,4])\n"
+    "                file.write(str(1) + \"::\" + str(stock_id) + \"::0::\" + str(stock_id) + \"\\n\""
    ]
   },
   {
