--- a/generate_data.ipynb
+++ b/generate_data.ipynb
@@ -27,6 +27,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "121\n",
+      "121\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "last_user = 999\n",
+    "\n",
+    "user_example = np.array([last_user] * 121)\n",
+    "stocks_example = np.array(list(range(1, 122)))\n",
+    "\n",
+    "print(len(user_example))\n",
+    "print(len(stocks_example))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
