--- a/generate_portfolio.ipynb
+++ b/generate_portfolio.ipynb
@@ -14,7 +14,7 @@
     "            if stock_id in stocks:\n",
     "                file.write(str(1) + \"::\" + str(stock_id) + \"::1::\" + str(stock_id) + \"\\n\")\n",
     "            else:\n",
-    "                file.write(str(1) + \"::\" + str(stock_id) + \"::0::\" + str(stock_id) + \"\\n\""
+    "                file.write(str(1) + \"::\" + str(stock_id) + \"::0::\" + str(stock_id) + \"\\n\")"
    ]
   },
   {
